# modem-watchdog

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  pyproject.toml  skills-lock.json
.github/workflows/: build-deb.yml  ci-qemu-fallback.yml  ci.yml  hil.yml
.gsd/: last-snapshot.md
.gsd.migrating/: CODEBASE.md  CONTEXT.md  DECISIONS.md  PREFERENCES.md  PROJECT.md  REQUIREMENTS.md  STATE.md  doctor-history.jsonl  gsd.db  gsd.db-shm  gsd.db-wal  last-snapshot.md  metrics.json  notifications.jsonl
.gsd.migrating/activity/: 001-execute-task-M001-S11-T01.jsonl  001-research-slice-M001-S11.jsonl  002-execute-task-M001-S11-T02.jsonl  002-plan-slice-M001-S11.jsonl  003-execute-task-M001-S11-T03.jsonl  003-plan-slice-M001-S11.jsonl  004-execute-task-M001-S11-T04.jsonl  004-plan-slice-M001-S11.jsonl  005-execute-task-M001-S11-T04.jsonl  006-execute-task-M001-S11-T05.jsonl  007-execute-task-M001-S11-T05.jsonl  008-execute-task-M001-S11-T06.jsonl  009-execute-task-M001-S11-T06.jsonl  010-execute-task-M001-S11-T07.jsonl  011-complete-slice-M001-S11.jsonl  012-complete-slice-M001-S11.jsonl  (+4 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
debian/: changelog  control  copyright  python.sha256  rules  spark-modem-watchdog.dirs  spark-modem-watchdog.install  spark-modem-watchdog.logrotate  spark-modem-watchdog.postinst  spark-modem-watchdog.postrm  spark-modem-watchdog.service
docs/: ARCHITECTURE.md  CUTOVER_RUNBOOK.md  FLEET_GATES.md  GLOSSARY.md  MIGRATION.md  MIGRATION_POSTMORTEM_TEMPLATE.md  PRD.md  README.md  RECOVERY_SPEC.md  RUNBOOK.md  SCHEMA.md  TEST_STRATEGY.md  V1_PURGE_CHECKLIST.md
docs/adr/: README.md  (+14 more)
packaging/: requirements.in
scripts/: build_deb.sh  lint_no_subprocess.sh  postinst_smoke_test.sh
tests/: __init__.py  conftest.py  test_recovery_spec.py
tools/: audit_soak_exhausted.py  audit_soak_zao.py  check_spec.py  gen_replay_fixtures.py  pull_replay_traces.py  validate_cutover.py
(+741 files in other folders)
